2008-05-26  Perry McFarlane  <perry_m@fastmail.fm>
* antic.[ch], atari.[ch], atari_sdl.c, cartridge.h, cassette.c, cpu.h,
gtia.[ch], javanvm/atari_javanvm.c, mzpokeysnd.c, pbi_bb.c, pbi_mio.c, 
pbi_scsi.c, pbi_xld.[ch], pia.h, platform.h, pokey.h, rtime.[ch], sio.h,
statesav.c, ui.c, ui_basic.c, util.[ch], votrax.[ch]:
I compiled with:
CC = gcc -ansi -pedantic -Wall -Waggregate-return -Wmissing-declarations 
-Wmissing-prototypes -Wredundant-decls -Wstrict-prototypes -Winline 
and I found missing headers and lack of static in many places.
Black Box and MIO will now contiune with SCSI disabled if the disk image
is not found.
* Makefile.in, configure.ac, cpu.c, atari_vga.c, sound_dos.c, vga_gfx.c,
javanvm/atari_javanvm.c, rdevice.c, win32/atari_win32.c, win32/keyboard.h,
win32/main.h, win32/screen_win32.c:
Made windx, sdl, and javanvm compile with -ansi -pedantic. Fixed more
warnings. rdevice.c: removed // comments and warnings. Made improved
gcc warnings the default for windx, sdl, javanvm, and dosvga. cpu.c:
gcc will use goto and use of __extension__ will avoid -pedantic warnings.


2008-05-25  Perry McFarlane  <perry_m@fastmail.fm>
* atari_sdl.c, cpu.c, pbi_mio.c, pbi_xld.c, win32/atari_win32.c,
win32/screen_win32.c: some gcc -ansi -pedantic fixes


2008-05-25  Piotr Fusik  <fox@scene.pl>
* win32/msc/Makefile: added votrax and pbi_xld

* sio.c, pbi_xld.c: made compilable with VC2005


2008-05-25  Perry McFarlane  <perry_m@fastmail.fm>
* votrax.[ch] vtxsmpls.inc pbi.[ch] pbi_xld.[ch] pbi_mio.[ch] pbi_bb.[ch]
pbi_scsi.[ch] sio.[ch] atari.c configure.ac atari_sdl.c
dos/atari_vga.c javanvm/atari_javanvm.c win32/atari_win32.c memory.c
pokeysnd.c DOC/CREDITS DOC/README DOC/TODO DOC/USAGE:
Added emulation of the 1400XL, 1450XLD, MIO and Black Box.


2008-05-24  Achim Haertel  <achim.haertel@e-technik.tu-chemnitz.de>
* cassette.c: implemented loading with variable baud rate


2008-05-22  Petr Stehlik  <pstehlik@sophics.cz>